# gralc-rag

./: .gitignore  LICENSE  README.md  check_refs.py  paper.md  paper.tex  pyproject.toml  references.bib  sn-jnl.cls
results/fulltext/: fulltext_gralc_rag.json  fulltext_gralc_rag_graph.json  fulltext_late_chunking.json  fulltext_naive.json  fulltext_retrieval_summary.json  fulltext_semantic.json  fulltext_structure_aware.json  generation_fulltext_naive.json  generation_fulltext_semantic.json  generation_fulltext_structure_aware.json  partial_gralc_rag.json  partial_gralc_rag_graph.json  significance_tests.json
scripts/: 01_download_corpus.py  02_index_corpus.py  03_evaluate_retrieval.py  03_evaluate_retrieval_v2.py  04_evaluate_generation.py  04_evaluate_generation_v2.py  05_run_ablations.py  06_build_fulltext_corpus.py  07_generate_crosssection_qa.py  08_evaluate_fulltext_retrieval.py  09_generate_fulltext_figures.py  10_evaluate_fulltext_generation.py  11_update_paper_tables.py  generate_figures.py  run_full_pipeline.sh
src/gralc_rag/: config.py
src/gralc_rag/benchmark/: __init__.py  llm_qa.py  template_qa.py
src/gralc_rag/chunking/: __init__.py  late.py  naive.py  semantic.py  structure_aware.py
src/gralc_rag/corpus/: __init__.py  condition_builder.py  downloader.py  parser.py
src/gralc_rag/evaluation/: benchmarks.py  crosssection_metrics.py  metrics.py  statistical.py
src/gralc_rag/generation/: openai_gen.py
tests/: test_condition_builder.py  test_config.py  test_crosssection_metrics.py  test_downloader.py  test_statistical.py  test_template_qa.py
(+6 files in other folders)
